welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:14: error: not found: value prendbiscuit
	if (!estFaceMur) prendbiscuit();
                         ^