welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
retourne();
while (!estSurBiscuit()) avance();
prendBiscuit();

while (!estFaceMur())
{
	while (!estSurBiscuit()) recule();

	avance();
	poseBiscuit();

	while (!estSurBiscuit && !estFaceMur()) avance();
	if (!estFaceMur) prendbiscuit();
}

droite();
avance();
gauche();
avance();
